commit avant changement de branche

--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -96,7 +96,7 @@ block body
             await getDataForPieCharts();
 
             let data = {
-            labels: ['noeuds malicieux', 'noeuds bons'],
+            labels: ['noeuds bons', 'noeuds malicieux'],
             datasets: [{
                 data: pushData[0], 
                 backgroundColor: ['#6b2d5c', '#E2C290']
