--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -80,8 +80,8 @@ block body
                     /* params */
         /*-------------------------------------*/
 
-        const pushData1 = [];
-        const pushData2 = [];
+        let pushData1 = [];
+        let pushData2 = [];
         const chartId1 = document.querySelector('#graph1'); // first pie chart, global stats window
         const chartId2 = document.querySelector('#graph2'); // pie chart in second window
         let chart;
@@ -119,11 +119,10 @@ block body
             };
 
             chart = new Chart(chartId, config);
-            console.log(chart.data.datasets);
         }
 
         pieChart(pushData1, chartId1); // creation of the global pie chart
-        pieChart(pushData2, chartId2); // creation of the pie chart for nodes
+        //pieChart(pushData2, chartId2); // creation of the pie chart for nodes
 
         
         /*-------------------------------------*/
@@ -375,19 +374,19 @@ block body
             const query = await fetch('/statsData');
             const data = await query.json();
             const dataToPush = [data.nbMalicieux,data.nbSains];
+            pushData1 = [];
+            pushData2 = [];
             pushData1.push(dataToPush);
             pushData2.push(dataToPush);
         };
 
         async function updateData() {
             await getDataForPieCharts();
-            console.log(pushData1);
-            chart.data.datasets[0].data.data = pushData1[-1];
-            console.log(chart.data.datasets[0]);
+            chart.data.datasets[0].data = pushData1[0];
             chart.update();
         }
 
-        setInterval(updateData,5000);
+        setInterval(updateData,1000);
         
  
     
