--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -119,7 +119,6 @@ block body
             };
 
             chart = new Chart(chartId, config);
-            console.log(chart.data.datasets);
         }
 
         pieChart(pushData1, chartId1); // creation of the global pie chart
@@ -136,7 +135,6 @@ block body
         async function createTitleNodes(){
             await getData();
             if(changedTitle === 0){
-                console.log('ok les gars')
                 const father = document.getElementById('nodeTitle');
                 let title = document.createElement("p");
                 title.setAttribute("id","monTitle");
@@ -149,7 +147,6 @@ block body
                 ipAddress.style.display = 'inline';
                 title.append(ipAddress)
             }else{
-                console.log('removed')
                 document.getElementById("monTitle").remove()
                 const father = document.getElementById('nodeTitle');
                 let title = document.createElement("p");
@@ -166,6 +163,7 @@ block body
             //- changeTitle = 0;
         }
 
+        
         createTitleNodes();
 
          /*-------------------------------------*/
@@ -199,27 +197,25 @@ block body
             td2.append('Vue')
 
             const vueLength = Data[0].allNode[index].vue.length;
-
+            console.log(index)
+           
             for (let pas = 0; pas < vueLength; pas++) {
-                console.log(Data[0])
                 let td2 = document.createElement('td');
                 tr1.append(td2);
                 let seed = Data[0].allNode[index].vue[pas].seed.toString()
-                console.log(typeof(seed))
                 td2.append(seed.slice(0,2))
 
                 let td3 = document.createElement('td');
                 td3.style.fontSize = 10
                 tr2.append(td3);
                 td3.append(Data[0].allNode[index].vue[pas].nodeID.adresseVirtuelle)
-
             }
-            changed = 1;
+            changed = 1;   
 
         }
 
         function deleteTableForNodes(){
-            if(changed === 1 )
+            if(changed === 1)
                 document.getElementById("monTab").remove()
         }
 
@@ -248,38 +244,47 @@ block body
         nodes.style.display = 'none';
 
         next.addEventListener("click", () => {
-        if(getComputedStyle(chartId1).display !== "none"){
-            screen.style.display = "none";
-            mainDiv.style.display = "none";
-            nodes.style.display = 'block';
-            buttonBar.style.margin = "105px";
-
-
-            deleteTableForNodes();
-
-            changedTitle = 1; // const to know if function was applied
-            createTitleNodes();
-
-            createTableForNodes();
-        }
             index = index+1;
+        if(getComputedStyle(chartId1).display !== "none"){
+                screen.style.display = "none";
+                mainDiv.style.display = "none";
+                nodes.style.display = 'block';
+                buttonBar.style.margin = "105px";
+
+        
+                deleteTableForNodes();
+                createTableForNodes();
+                createTitleNodes();
+
+
+                changedTitle = 1; // const to know if function was applied
+            
+            }
+            
         })
 
         prev.addEventListener("click", () => {
+            if(index === 0){
+
+            }else{
+                index = index - 1;
+            }
+                
+            
             if(getComputedStyle(chartId1).display !== "none"){
-            screen.style.display = "none";
-            mainDiv.style.display = "none";
-            nodes.style.display = 'block';
-            buttonBar.style.marginTop = "105px";
+                screen.style.display = "none";
+                mainDiv.style.display = "none";
+                nodes.style.display = 'block';
+                buttonBar.style.marginTop = "105px";
 
-            changedTitle = 1; // const to know if function was applied
-            createTitleNodes();
-
-            deleteTableForNodes();
-            createTableForNodes();
+                changedTitle = 1; // const to know if function was applied
+                
+                createTitleNodes();
+                deleteTableForNodes();
+                createTableForNodes();
 
             } 
-            index = index-1;
+            
         })
         
 
@@ -381,9 +386,7 @@ block body
 
         async function updateData() {
             await getDataForPieCharts();
-            console.log(pushData1);
             chart.data.datasets[0].data.data = pushData1[-1];
-            console.log(chart.data.datasets[0]);
             chart.update();
         }
 
