--- a/serveur/style/stats.css
+++ b/serveur/style/stats.css
@@ -56,7 +56,7 @@ h1, h2, h3, p{
 }
 
 #graph1{
-    width: 40% !important;
+    width: 30% !important;
     height: 80% !important;
     margin-left: auto;
     margin-right: auto;
@@ -66,11 +66,12 @@ h1, h2, h3, p{
 
 #graph2{
     /* display: inline !important; */
-    width: 20% !important;
+    width: 40% !important;
     height: 20% !important;
     margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
+    margin-right: -60%;
+    margin-top: -26%;
+    margin-bottom: auto;
     padding: 0;
 }
 
@@ -158,7 +159,8 @@ h3{
     top: 20px;
 }
 #nodes{
-    margin-left: 10%;
+    display: none;
+    margin-left: 5%;
     position: absolute;
     top: 20px;
 }
