--- a/serveur/style/stats.css
+++ b/serveur/style/stats.css
@@ -66,12 +66,13 @@ h1, h2, h3, p{
 
 #graph2{
     /* display: inline !important; */
-    width: 40% !important;
-    height: 20% !important;
-    margin-left: auto;
-    margin-right: -60%;
-    margin-top: -26%;
-    margin-bottom: auto;
+    position: absolute;
+    right: -580px;
+    top: 80px;
+    /* width: 300px !important;
+    height: 300px !important; */
+    width: 27vw !important;
+    height: 50vh !important;
     padding: 0;
 }
 
@@ -258,10 +259,13 @@ span {
 }
 
 
-/* line chart */
+/* gauge chart */
 
-#sub_chart{
-    z-index: 4;
+#subChart{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    margin-top: 3%;
 }
 
 
