Enlever le changement de graphique

--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -48,7 +48,7 @@ block body
             h1#open Ouvrir les options  
 
 
-    button#subChart
+    //- div#subChart
         h4(onclick='openChart()') Changer de graphique 
 
     #gaugeChart        
