--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -164,14 +164,14 @@ block body
 
             let td1 = document.createElement('td');
             tr1.append(td1);
-            td1.append('Age')
+            td1.append('Seed')
 
             let tr2 = document.createElement('tr');
             tab.append(tr2);
 
             let td2 = document.createElement('td');
             tr2.append(td2);
-            td2.append('Vue')
+            td2.append('View')
 
             const vueLength = Data[index]?.vue.length;
 
